--- a/docs/sass/components/_SHome.scss
+++ b/docs/sass/components/_SHome.scss
@@ -1,15 +1,40 @@
 section#home {
-    width: 100%;
-    height: 100vh;
-    position: relative;
-    top: 60px;
-    margin-bottom: 70px;
-    .home-content{
-        width: 100%;
-        height: 100%;
-        background-image: url("../assets/img/imgbook.png");
-        background-repeat: no-repeat;
-        background-size: contain;
-        background-position: center;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  top: 60px;
+  margin-bottom: 70px;
+  .home-content {
+    width: 1440px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    h2 {
+      font-weight: 700;
+      text-transform: uppercase;
+      position: relative;
+      padding: 0 0 0 60px;
+      span::before {
+        content: "";
+        width: 50px;
+        height: 10px;
+        background-color: $color-white-2;
+        position: absolute;
+        top: 50%;
+        left: 0;
+        transform: translateY(-50%);
+      }
     }
+
+    .home-image {
+      width: 100%;
+      height: 100%;
+      background-image: url("../assets/img/imgbook.png");
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center;
+    }
+  }
 }
