--- a/docs/sass/utilities/base/_reset.scss
+++ b/docs/sass/utilities/base/_reset.scss
@@ -1,21 +1,26 @@
 *,
 *::after,
-*::before{
-    border: 0;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: $font-family;
-
+*::before {
+  border: 0;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: $font-family;
 }
 
-html, body {
-    width: 100%;
-    position: relative;
+html,
+body {
+  width: 100%;
+  position: relative;
+  overflow-x: hidden;
 }
 
-a { text-decoration: none; }
-li { list-style: none;}
-h2{
-    margin: 0;
+a {
+  text-decoration: none;
+}
+li {
+  list-style: none;
+}
+h2 {
+  margin: 0;
 }
